# Fantasy-Football

./: CMakeLists.txt  README.md  draft.cpp  draft.h  main.cpp  players.cpp  players.h  quarterback.cpp  quarterback.h  quarterbacks.csv  runningback.cpp  runningback.h  runningbacks.csv  testing.cpp  widereciever.cpp  widereciever.h  widerecievers.csv
